--- a/src/Modal/Cards Template/CardsTemplate.module.css
+++ b/src/Modal/Cards Template/CardsTemplate.module.css
@@ -637,9 +637,10 @@
 
 .editActionsButtons {
   display: flex;
-  justify-content: center;
-  margin-top: 16px;
+  flex-direction: column;
   gap: 12px;
+  width: 100%;
+  margin-top: 16px;
 }
 
 .inputField,
