--- a/src/Modal/Cards Template/CardsTemplate.module.css
+++ b/src/Modal/Cards Template/CardsTemplate.module.css
@@ -396,7 +396,7 @@
   font-size: 18px;
   color: #8e8e93;
   cursor: grab;
-  padding: 4px;
+  padding: 0px;
   user-select: none;
 }
 
@@ -515,6 +515,8 @@
   cursor: pointer;
   border-radius: 12px;
   transition: all 0.2s ease, color 0.3s ease;
+  width: 100%;
+  background: rgba(255, 69, 58, 0.1);
 }
 
 .deleteButton.darkTheme {
