--- a/src/Sheets/Cards Editor/CardsEditor.module.css
+++ b/src/Sheets/Cards Editor/CardsEditor.module.css
@@ -255,7 +255,7 @@
   color: #1d1d1f;
   background: rgba(243, 242, 248, 1);
   box-sizing: border-box;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
+  /* box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05); */
   outline: none;
   min-width: fit-content;
 }
